<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Android Boot Manager</string>
    <string name="app_summary">MultiROM bootloader Manager</string>
    <string name="fatal">FATAL ERROR</string>
    <string name="about_txt_1">Founded by Luka Panio &amp; nift4</string>
    <string name="about_txt_2">    App Development: nift4</string>
    <string name="about_txt_3">    DroidBoot development: Luka Panio</string>
    <string name="about_txt_4">    Thanks to Volla &amp; F(x)tec for developer devices</string>
    <string name="cp_err_msg">Failed to extract some data. Did you install the app on a SD card? Pressing OK will take you to the app, do not do anything without investigating first!</string>
    <string name="wrong_device_msg">Android Boot Manager is not available for this device (%1$s).</string>
    <string name="device_msg">Android Boot Manager is available for this device (%1$s).</string>
    <string name="device_btn">Not your device?</string>
    <string name="bsp_msg">Your device uses an BSP codename (%1$s). That means we are not able to identify your device and you need to select yours.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="bootset_fail">ATTENTION! Failed to mount bootset! Please check logs and do not touch stuff!</string>
    <string name="select_droidboot_msg">You will now be asked for the DroidBoot file. Make sure it is the right for your device!</string>
    <string name="select_droidboot_ok">DroidBoot is selected.</string>
    <string name="select_droidboot_unzip">This looks like a zip file. You need to extract lk.img!</string>
    <string name="select_droidboot_invalid">That does not look like an DroidBoot!</string>
    <string name="sure_title">Are you sure?</string>
    <string name="install">Install</string>
    <string name="online">Online Installer</string>
    <string name="check">Check Requirements</string>
    <string name="download">Download</string>
    <string name="be_careful">YOU CAN LOOSE YOUR DATA! YOU CAN BRICK YOUR DEVICE! YOU CAN LOOSE YOUR IMEI! YOU CAN LOOSE YOUR MONEY! NOBODY IS RESPONSIBLE EXCEPT YOU! DO AT YOUR OWN RISK AND BE CAREFUL!</string>
    <string name="umount">Unmount Bootset</string>
    <string name="timeout">Timeout</string>
    <string name="default_entry">Default Entry</string>
    <string name="save">Save</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="title">Title</string>
    <string name="kernel">Kernel</string>
    <string name="dtb">DTB</string>
    <string name="initrd">Initrd</string>
    <string name="cmdline">Cmdline</string>
    <string name="delete">Delete</string>
    <string name="delete_msg">This will delete partition %1$d of type %2$s labeled \'%3$s\'</string>
    <string name="delete_msg_2">This will delete the configuration file of the ROM %1$s. You need to delete the partitions on the SD card manually to prevent data loss.</string>
    <string name="add_rom">Add ROM</string>
    <string name="other_os">Other OS (boot.img) (Advanced users only!)</string>
    <string name="empty_entry">Empty Entry file (Advanced users only!)</string>
    <string name="wait">Please wait…</string>
    <string name="delete_prog">Deleting…</string>
    <string name="convert_prog">Converting…</string>
    <string name="creating_prog">Creating…</string>
    <string name="renaming_prog">Renaming…</string>
    <string name="delete_real_rom">You cannot delete your primary ROM!</string>
    <string name="rename">Rename</string>
    <string name="updatelk">Update DroidBoot</string>
    <string name="rom_type_add_ut_sysimg_halium">Ubuntu Touch (System image, Halium Boot image)</string>
    <string name="select_halium_boot">Please select the halium boot image</string>
    <string name="select_hybris_boot">Please select the hybris boot image</string>
    <string name="select_boot">Please select the boot image</string>
    <string name="select_system_image">Please select the system image</string>
    <string name="selected">File selected.</string>
    <string name="enter_rom_name">Please enter the ROM name for displaying in menu. You may choose freely.</string>
    <string name="enter_rom_folder">Please enter the ROM directory name. It may not already exist. If in doubt, keep the default.</string>
    <string name="rom_type_add_sailfish">Sailfish OS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_header_subtitle">One phone to start them all!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_roms">ROMs</string>
    <string name="menu_sd">SD card</string>
    <string name="menu_generalcfg">General settings</string>
    <string name="wizard_updatelk_intro">You are about to update the bootloader.</string>
    <string name="wizard_addrom_intro">You are about to install an ROM to the SD card.</string>
    <string name="aboutLibraries">About Libraries</string>
    <string name="aboutLibraries_description_showIcon" translatable="false" tools:keep="@string/aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion" translatable="false" tools:keep="@string/aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text" translatable="false" tools:keep="@string/aboutLibraries_description_text">@string/nav_header_subtitle</string>
    <string name="loading">Loading…</string>
    <string name="installcheck1">Install check #1:</string>
    <string name="installcheck2">Install check #2:</string>
    <string name="installcheck3">Install check #3:</string>
    <string name="superuser">Root:</string>
    <string name="failure">Failure</string>
    <string name="unknown_os">Unknown OS</string>
    <string name="ut">Ubuntu Touch</string>
    <string name="android">Android</string>
    <string name="about">About</string>
    <string name="welcome">Welcome!</string>
    <string name="wizard_deviceinstaller_text">Ready! Please follow the next steps for installing Android Boot Manager. If you redecided, you can click cancel. Nothing was changed until now.</string>
    <string name="wizard_devicerominstaller_text">Ready! Please follow the next steps for installing your ROM. If you redecided, you can click cancel. Nothing was changed until now except that your SD card got flashed.</string>
    <string name="installerWelcome">Welcome to the Android Boot Manager installer. This will install Android Boot Manager on your device. Not easily undoable modifications are being done, please do not install without knowledge about it. Keep the prerequisites in mind - you may need to format stuff manually! Disclaimer follows:</string>
    <string name="next">Next</string>
    <string name="manual">Manual</string>
    <!-- Assistant page navigation -->
    <string name="prev">Prev</string>
    <string name="help">Help</string>
    <string name="unknown_part">Unknown partition type</string>
    <string name="sd_mbr">This SD card uses the legacy MBR partition scheme but GPT is required. However, it can be converted to GPT. But this may cause data loss, therefore please backup your data.</string>
    <string name="sd_err">Unknown error.</string>
    <string name="convert">Convert</string>
    <string name="failed">Failed</string>
    <string name="successful">Successful</string>
    <string name="free_space">Free space</string>
    <string name="partid" tools:ignore="PluralsCandidate">Partition %1$d labeled \"%2$s\"</string>
    <string name="partidn" tools:ignore="PluralsCandidate">Partition %1$d</string>
    <string name="partidt" tools:ignore="PluralsCandidate">%1$s with id %2$d labeled \"%3$s\"</string>
    <string name="create">Create</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="restoresparse">Restore Sparse</string>
    <string name="backup_msg">Welcome to the simple Backup &amp; Restore tool. What do you want to do with this partition?</string>
    <string name="copy_file">Copying file…</string>
    <string name="sector_range">Sector range</string>
    <string name="label">Label</string>
    <string name="size">Size</string>
    <string name="free_space_size">Free space of size %1$s</string>
    <string name="start_sector">Start Sector</string>
    <string name="end_sector">End Sector</string>
    <string name="adopted_part">Adopted Storage</string>
    <string name="meta_part">ABM/Adopted Storage Metadata</string>
    <string name="portable_part">Portable Storage</string>
    <string name="system_part">OS System data</string>
    <string name="data_part">OS User data</string>
    <string name="data">Data</string>
    <string name="system">System</string>
    <string name="update_real_rom">You cannot update your real ROM via ABM!</string>
    <string name="kernel_update">Kernel Update</string>
    <string name="kernel_update_msg">You are about to update the kernel/boot image of the selected ROM and regenerate it\'s config.</string>
    <string name="select_part">Please select an unused partition on your SD card configured with the following type: %1$s. Please make sure it really is the correct one, you can cancel and label it if unsure. If you didn\'t create one yet, do that first.</string>
    <!-- How an partition is used -->
    <string name="usage">Usage</string>
    <string name="select_droidian_gsi">Select Droidian GSI</string>
    <string name="select_droidian_adapt">Select Droidian Adaption</string>
    <string name="select_droidian_devtools">Select Droidian DevTools</string>
    <string name="rom_type_add_droidian">Droidian GSI with Adaption and DevTools</string>
	<string name="menu">Menu</string>
    <string name="internal_storage_space">Internal Storage Space</string>
    <string name="internal_space_failed">Requires %1$d GB Free space</string>
    <string name="partition_check_failed">Requires %1$d partitions</string>
    <string name="missing_meta">Missing Metadata partition</string>
    <string name="missing_meta_summery">Metadata partition is missing on your SD card. Create metadata on first partition?</string>
    <string name="missing_meta_error">Metadata partition is missing on your SD card. Please make sure you have backup of your data, Remove all partitions and create metadata on first partition</string>
    <string name="supported">Supported Device</string>
    <string name="has_sdcard">SD Card available</string>
    <string name="has_meta">SD Card initialized</string>
    <string name="setup">Setup</string>
</resources>
