<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.volla.bootmanager.legacy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_roms"
        android:name="com.volla.bootmanager.legacy.ui.roms.ROMFragment"
        android:label="@string/menu_roms"
        tools:layout="@layout/wizard_installer_finddevice" />

    <fragment
        android:id="@+id/nav_sd"
        android:name="com.volla.bootmanager.legacy.ui.sdcard.SDCardFragment"
        android:label="@string/menu_sd"
        tools:layout="@layout/wizard_installer_finddevice" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.volla.bootmanager.legacy.ui.about.AboutFragment"
        tools:layout="@layout/fragment_about"
        android:label="@string/about" />

</navigation>